--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,6 @@ jobs:
     strategy:
       matrix:
         php-versions: [ '7.4', '8.0' ]
-        extensions: swoole
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -22,6 +20,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
+          extensions: swoole-4.5.10
           coverage: pcov
 
       - name: Get composer cache directory
