--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,6 @@
     },
     "require": {
         "php": ">=7.4",
-        "ext-swoole": "^4.5",
         "psr/http-message": "^1.0",
         "psr/http-server-handler": "^1.0",
         "psr/http-factory": "^1.0",
@@ -49,5 +48,9 @@
         "pestphp/pest": "^1.20.0",
         "laminas/laminas-stratigility": "^3.5",
         "vimeo/psalm": "^4.12"
+    },
+    "suggest": {
+        "ext-swoole": "You need either ext-swoole or ext-openswoole",
+        "ext-openswoole": "You need either ext-swoole or ext-openswoole"
     }
 }
